bpms-on-k8s-deploy-master/aks-yaml/ingress-my-demo-project/rules-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rules-ingress
  namespace: bpms-load-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: myrules.bpmspoc31032023.internal.net
    http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: rules-demo-cluster-ip-svc
              port:
                number: 5555
